# monad_meetup_talk

./: README.md  RequestMonad.scala.html  index.html
examples/hmonadic_web/: hmonadicWeb.cabal
examples/hmonadic_web/src/: Main.hs  Request.hs
examples/hmonadic_web_state/: LICENSE  hmonadic_web_state.cabal
examples/hmonadic_web_state/src/: AppState.hs  Main.hs  RequestReader.hs  Response.hs
ui/scala_utf/: pretty.css
